# alexalemi.github.io

./: .envrc  .gitignore  .gitmodules  CNAME  LICENSE  Makefile  README.md  index.bak  index.html  pyproject.toml  requirements.txt  rss.xml
assets/stylesheets/: default.css  main.css  md.css  rss.xsl  theme.css
blog/: climate.md.html  compression.html  coronavirus.md.html  deeplearning.md.html  dream.md.html  kl.md.html  latex.html  latex.md.html  pga.md.html  prediction.md.html  starter.md.html  template.html  testing.md.html  thermodynamics.md.html  vib.md.html  you-dont-know-vaes.html
data/: posts.json  research.json  service.json  talks.json  writing.json
publications/: inceptionblog.html  rss.xml  vaetfp.html  wget-log
random/: sliderule.hex.html  sliderule.html
random/battleship/: index.html
random/election/: Election_Paths.json  Meter.js  index.html
src/: compile.py  live.py  mathjax-compile.mjs  mathjax.py  package.json  rss.py
talks/: basics-of-infotheory.html  case-for-compression.html  fixing-broken-elbo.html  focusing-on-the-representation.html  how-to-think-about-ai.html  inferential-engines.html  information-bottleneck-podcast.html  information-theory-for-representation-learning.html  infotheory-emory.html  intro-to-statistics.html  ita-pib.html  ml-and-thermo.html  order-of-magnitude-physics.html  pacm-talk.html  sciml-thermo.html  tale-of-two-worlds.html  therml-aps.html  therml.html  thermodynamics-and-ml.html  uaivib.html  variational-prediction.html  vib-is-half-bayes.html  whats-missing.html
templates/: index.tpl  post.tpl
(+13 files in other folders)
