[tool.poetry]
name = "alexalemi-github-io"
version = "0.1.0"
description = "My Personal Website"
authors = ["Alex Alemi <alexalemi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "alexalemi"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
arxiv = "^2.1.3"
mistletoe = "^1.4.0"
feedgen = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
