[project]
name = "alexalemi-github-io"
version = "0.1.0"
description = "My Personal Website"
authors = [{ name = "Alex Alemi", email = "alexalemi@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "jinja2>=3.1.4,<4",
    "arxiv>=2.1.3,<3",
    "mistletoe>=1.4.0,<2",
    "feedgen>=1.0.0,<2",
    "livereload>=2.7.0,<3",
]

[tool.hatch.build.targets.sdist]
include = ["alexalemi"]

[tool.hatch.build.targets.wheel]
include = ["alexalemi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
